--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,12 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-logger": "^1.0.3",
+    "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.0.3",
-    "realm": "^12.7.1"
+    "realm": "^12.7.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -30,6 +34,7 @@
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^9.0.8",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
