--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-vector-icons": "^10.0.3",
     "realm": "^12.7.1"
   },
