--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,11 +21,13 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-get-random-values": "^1.11.0",
     "react-native-logger": "^1.0.3",
-    "react-native-uuid": "^2.0.2",
+    "react-native-mmkv-storage": "^0.9.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.0.3",
     "realm": "^12.7.1",
+    "redux-persist": "^6.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
