--- a/frontend/ios/Pill Pal.xcodeproj/xcshareddata/xcschemes/Pill Pal.xcscheme
+++ b/frontend/ios/Pill Pal.xcodeproj/xcshareddata/xcschemes/Pill Pal.xcscheme
@@ -16,8 +16,8 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "frontend.app"
-               BlueprintName = "frontend"
-               ReferencedContainer = "container:frontend.xcodeproj">
+               BlueprintName = "Pill Pal"
+               ReferencedContainer = "container:Pill Pal.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "frontendTests.xctest"
                BlueprintName = "frontendTests"
-               ReferencedContainer = "container:frontend.xcodeproj">
+               ReferencedContainer = "container:Pill Pal.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -56,8 +56,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "frontend.app"
-            BlueprintName = "frontend"
-            ReferencedContainer = "container:frontend.xcodeproj">
+            BlueprintName = "Pill Pal"
+            ReferencedContainer = "container:Pill Pal.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -73,8 +73,8 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "frontend.app"
-            BlueprintName = "frontend"
-            ReferencedContainer = "container:frontend.xcodeproj">
+            BlueprintName = "Pill Pal"
+            ReferencedContainer = "container:Pill Pal.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
