--- a/frontend/ios/Podfile
+++ b/frontend/ios/Podfile
@@ -25,7 +25,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'frontend' do
+target 'Pill Pal' do
   config = use_native_modules!
 
   use_react_native!(
