--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,22 @@
   },
   "dependencies": {
     "@notifee/react-native": "^7.8.2",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@realm/react": "^0.6.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-logger": "^1.0.3",
     "react-native-mmkv-storage": "^0.9.1",
+    "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-uuid": "^2.0.2",
